fix time alignment in chat convo

--- a/src/app/inbox-details/inbox-details.page.scss
+++ b/src/app/inbox-details/inbox-details.page.scss
@@ -267,11 +267,13 @@
 
         .time {
             font-size: var(--ion-text-10) !important;
+            clear: both;
         }
 
         .user-time {
             font-size: var(--ion-text-10) !important;
             float: right;
+            clear: both;
         }
     }
 
